SERVER-3422 honor atomic mode in update 'WillNeed' yielding